--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aws-amplify/auth",
+  "name": "@dustfoundation/amplify-auth",
   "version": "4.6.10",
   "description": "Auth category of aws-amplify",
   "main": "./lib/index.js",
@@ -25,7 +25,7 @@
     "build:esm": "node ./build es6",
     "build:cjs:watch": "node ./build es5 --watch",
     "build:esm:watch": "node ./build es6 --watch",
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "build": "tsc -p tsconfig.json",
     "clean": "rimraf lib-esm lib dist",
     "format": "echo \"Not implemented\"",
     "lint": "tslint '{__tests__,src}/**/*.ts'"
@@ -47,7 +47,45 @@
     "crypto-js": "^4.1.1"
   },
   "devDependencies": {
-    "@jest/test-sequencer": "^24.9.0"
+    "@babel/cli": "7.17.0",
+    "@babel/core": "7.17.2",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "4.14.182",
+    "@types/node": "^8.9.5",
+    "@types/puppeteer": "1.3.0",
+    "babel-loader": "^8.0.0",
+    "bundlewatch": "^0.3.1",
+    "codecov": "^3.6.5",
+    "compression-webpack-plugin": "^1.1.3",
+    "cypress": "^3.2.0",
+    "husky": "^3.0.5",
+    "jest": "^24.x.x",
+    "jest-config": "24.8.0",
+    "json-loader": "^0.5.7",
+    "lerna": "^3.13.1",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^1.11.1",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.67.4",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript": "^1.0.0",
+    "source-map-loader": "^0.2.1",
+    "ts-jest": "^24.x.x",
+    "tslint": "^5.7.0",
+    "tslint-config-airbnb": "^5.8.0",
+    "typedoc": "^0.16.9",
+    "typescript": "^4.8.4",
+    "uuid-validate": "^0.0.3",
+    "webpack": "^4.32.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.1.0",
+    "winston": "^3.2.1",
+    "wml": "0.0.83"
   },
   "jest": {
     "globals": {
