--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@dustfoundation/amplify-auth",
   "version": "4.6.11",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
