--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,28 @@
   "compilerOptions": {
     "outDir": "./dist",
     "skipLibCheck": true,
-    "declaration": true
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "lib": [
+      "dom",
+      "es2017",
+      "esnext.asynciterable",
+      "es2018.asyncgenerator",
+      "es2019"
+    ],
+    "downlevelIteration": true,
+    "target": "es5",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "declaration": true,
+    "noEmitOnError": true,
+    "incremental": true,
+    "types": [
+      "node"
+    ],
+    "sourceMap": true
   },
-  "exclude": ["__tests__"]
+  "exclude": [
+    "__tests__"
+  ]
 }
